# KmerCounting

./: CMakeLists.txt  README.md
Unity/: .CMakeLists.txt.swp  CMakeLists.txt
src/: .CMakeLists.txt.swp  .main.c.swp  .sequence.h.swp  CMakeLists.txt  codify_kmers.c  codify_kmers.h  main.c  sequence.c  sequence.h
test/: .CMakeLists.txt.swo  .test_sequence.c.swp  CMakeLists.txt
test/sequence_suite/: .CMakeLists.txt.swp  .test_sequence.c.swp  CMakeLists.txt  realn02.fa  test_long.txt  test_sequence.c
